# my-fastapi-template

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
docker/: app.sh
migrations/: env.py
src/: config.py  constants.py  dao.py  database.py  exceptions.py  main.py  repository.py
src/migrations/: env.py
src/users/: __init__.py  dao.py  dependencies.py  models.py  router.py  schemas.py  service.py  utils.py
